Add mobile hamburger menu for navigation
- Added hamburger menu button visible on mobile (< 1024px)
- Toggle sidebar visibility on mobile devices
- Animated hamburger icon (transforms to X when active)
- Sidebar slides in from left on mobile
- Auto-closes menu when selecting navigation items
- Enhanced touch targets for better mobile UX

--- a/admin.html
+++ b/admin.html
@@ -13,8 +13,15 @@
 
 <body>
     <div class="dashboard-grid">
+        <!-- Mobile Menu Button -->
+        <button class="mobile-menu-btn" id="mobileMenuBtn" onclick="toggleMobileMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
         <!-- Sidebar -->
-        <aside class="sidebar">
+        <aside class="sidebar" id="sidebar">
             <div class="navbar-brand" style="margin-bottom: 2rem;">🛒 Retail Shop</div>
 
             <ul class="sidebar-menu">
@@ -563,6 +570,14 @@
                     }, 1500);
                 }
             );
+        }
+
+        // Mobile menu toggle
+        function toggleMobileMenu() {
+            const sidebar = document.getElementById('sidebar');
+            const menuBtn = document.getElementById('mobileMenuBtn');
+            sidebar.classList.toggle('active');
+            menuBtn.classList.toggle('active');
         }
 
         // Initialize dashboard on load
