Fix UI and functionality defects: API transformations, mobile menu positioning, sidebar auto-close, search z-index

--- a/admin.html
+++ b/admin.html
@@ -417,12 +417,21 @@
             // Add active class to clicked link
             event.target.classList.add('active');
 
+            // Close mobile sidebar if open
+            const sidebar = document.getElementById('sidebar');
+            const menuBtn = document.getElementById('mobileMenuBtn');
+            if (sidebar && sidebar.classList.contains('active')) {
+                sidebar.classList.remove('active');
+                if (menuBtn) menuBtn.classList.remove('active');
+            }
+
             // Load section data
             if (sectionId === 'dashboard') loadDashboard();
             if (sectionId === 'products') ProductManager.renderProductsTable();
             if (sectionId === 'reports') initReports();
             if (sectionId === 'settings') loadSettings();
         }
+
 
         // Load dashboard
         async function loadDashboard() {
