--- a/public/admin.html
+++ b/public/admin.html
@@ -316,7 +316,8 @@
                         <div class="grid grid-2">
                             <div class="form-group">
                                 <label class="form-label">Phone</label>
-                                <input type="tel" class="form-input" id="companyPhone" required>
+                                <input type="tel" class="form-input" id="companyPhone" required
+                                    oninput="this.value = this.value.replace(/[^0-9+\-\s()]/g, '')">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Email</label>
