--- a/public/billing.html
+++ b/public/billing.html
@@ -47,7 +47,8 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Phone Number</label>
-                            <input type="tel" class="form-input" id="customerPhone" placeholder="Optional">
+                            <input type="tel" class="form-input" id="customerPhone" placeholder="Optional"
+                                oninput="this.value = this.value.replace(/[^0-9+\-\s()]/g, '')">
                         </div>
                     </div>
                 </div>
