Fix: Mobile navbar buttons, hide Home button for billing users, and handle undefined billedBy field
- Added responsive CSS to make Home and Logout buttons smaller on mobile (≤768px)
- Hide Home button for billing users (non-admin) in billing.html
- Added fallback 'N/A' for undefined billedBy field in PDF invoices and CSV exports
- Fixes three reported defects for better UX and data display

--- a/billing.html
+++ b/billing.html
@@ -18,8 +18,8 @@
             <div class="navbar-brand">🛒 Retail Shop Pro</div>
             <div class="navbar-menu">
                 <span id="userDisplay" style="color: var(--text-secondary);"></span>
-                <a href="admin.html" class="btn btn-outline" style="text-decoration: none; margin-right: 0.5rem;"
-                    title="Go to Dashboard">
+                <a href="admin.html" class="btn btn-outline" id="homeButton"
+                    style="text-decoration: none; margin-right: 0.5rem;" title="Go to Dashboard">
                     🏠 Home
                 </a>
                 <button class="btn btn-outline" onclick="Auth.logout()">Logout</button>
@@ -118,6 +118,14 @@
         // Display user info
         const user = Auth.getCurrentUser();
         document.getElementById('userDisplay').textContent = `Welcome, ${user.name}`;
+
+        // Hide Home button for billing users (non-admin)
+        if (user.role !== 'admin') {
+            const homeButton = document.getElementById('homeButton');
+            if (homeButton) {
+                homeButton.style.display = 'none';
+            }
+        }
 
         // Initialize billing
         BillingManager.init();
