--- a/public/billing.html
+++ b/public/billing.html
@@ -51,6 +51,16 @@
                                 oninput="this.value = this.value.replace(/[^0-9+\-\s()]/g, '')">
                         </div>
                     </div>
+                    <div class="grid grid-2 mt-2">
+                        <div class="form-group">
+                            <label class="form-label">Address</label>
+                            <input type="text" class="form-input" id="customerAddress" placeholder="Customer Address">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">GSTIN (Optional)</label>
+                            <input type="text" class="form-input" id="customerGstin" placeholder="Customer GSTIN">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Product Search -->
