--- a/public/billing.html
+++ b/public/billing.html
@@ -61,6 +61,22 @@
                             <input type="text" class="form-input" id="customerGstin" placeholder="Customer GSTIN">
                         </div>
                     </div>
+                    <div class="grid grid-2 mt-2">
+                        <div class="form-group">
+                            <label class="form-label">Transport Vehicle No. (Optional)</label>
+                            <input type="text" class="form-input" id="transportVehicle" placeholder="Vehicle Number">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Transport Charge (Optional)</label>
+                            <input type="number" class="form-input" id="transportCharge" placeholder="₹0.00" step="0.01"
+                                min="0">
+                        </div>
+                    </div>
+                    <div class="form-group mt-2">
+                        <label class="form-label">Billing Notes (Optional)</label>
+                        <textarea class="form-input" id="billingNotes" placeholder="Additional notes..."
+                            rows="2"></textarea>
+                    </div>
                 </div>
 
                 <!-- Product Search -->
@@ -105,6 +121,13 @@
                             <span>Total:</span>
                             <strong>₹0.00</strong>
                         </div>
+                    </div>
+
+                    <!-- Discount Field -->
+                    <div class="form-group mt-3">
+                        <label class="form-label">Discount (₹)</label>
+                        <input type="number" class="form-input" id="discountAmount" placeholder="0.00" step="0.01"
+                            min="0" oninput="BillingManager.updateSummary()">
                     </div>
 
                     <button class="btn btn-success mt-3" style="width: 100%;" onclick="BillingManager.generateBill()">
