fix: Add HSN Code header to products table

--- a/public/admin.html
+++ b/public/admin.html
@@ -117,6 +117,7 @@
                                 <th>Price</th>
                                 <th>Stock</th>
                                 <th>GST Rate</th>
+                                <th>HSN Code</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
@@ -432,6 +433,7 @@
             if (sectionId === 'reports') initReports();
             if (sectionId === 'settings') loadSettings();
         }
+
 
         // Load dashboard
         async function loadDashboard() {
