--- a/admin.html
+++ b/admin.html
@@ -117,6 +117,7 @@
                                 <th>Price</th>
                                 <th>Stock</th>
                                 <th>GST Rate</th>
+                                <th>HSN Code</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
