--- a/public/billing.html
+++ b/public/billing.html
@@ -67,9 +67,9 @@
                             <input type="text" class="form-input" id="transportVehicle" placeholder="Vehicle Number">
                         </div>
                         <div class="form-group">
-                            <label class="form-label">Transport Charge (Optional)</label>
+                            <label class="form-label">Delivery Charge (Optional)</label>
                             <input type="number" class="form-input" id="transportCharge" placeholder="₹0.00" step="0.01"
-                                min="0">
+                                min="0" oninput="BillingManager.updateSummary()">
                         </div>
                     </div>
                     <div class="form-group mt-2">
