feat: Improve address field labels - Bill To and Delivery To

--- a/public/billing.html
+++ b/public/billing.html
@@ -53,8 +53,8 @@
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
-                            <label class="form-label">Address</label>
-                            <input type="text" class="form-input" id="customerAddress" placeholder="Customer Address">
+                            <label class="form-label">Bill To Address</label>
+                            <input type="text" class="form-input" id="customerAddress" placeholder="Billing Address">
                         </div>
                         <div class="form-group">
                             <label class="form-label">GSTIN (Optional)</label>
@@ -63,9 +63,9 @@
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
-                            <label class="form-label">Delivery to Address (Optional)</label>
+                            <label class="form-label">Delivery To Address (Optional)</label>
                             <input type="text" class="form-input" id="deliveryAddress"
-                                placeholder="If different from customer address">
+                                placeholder="Delivery Address (if different)">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Transport Vehicle No. (Optional)</label>
