fix: Update public/billing.html with Bill To and Delivery To address labels

--- a/public/billing.html
+++ b/public/billing.html
@@ -53,8 +53,8 @@
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
-                            <label class="form-label">Address</label>
-                            <input type="text" class="form-input" id="customerAddress" placeholder="Customer Address">
+                            <label class="form-label">Bill To Address</label>
+                            <input type="text" class="form-input" id="customerAddress" placeholder="Billing Address">
                         </div>
                         <div class="form-group">
                             <label class="form-label">GSTIN (Optional)</label>
@@ -63,13 +63,13 @@
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
-                            <label class="form-label">Transport Vehicle No. (Optional)</label>
-                            <input type="text" class="form-input" id="transportVehicle" placeholder="Vehicle Number">
+                            <label class="form-label">Delivery To Address (Optional)</label>
+                            <input type="text" class="form-input" id="deliveryAddress"
+                                placeholder="Delivery Address (if different)">
                         </div>
                         <div class="form-group">
-                            <label class="form-label">Transport Charge (Optional)</label>
-                            <input type="number" class="form-input" id="transportCharge" placeholder="₹0.00" step="0.01"
-                                min="0">
+                            <label class="form-label">Transport Vehicle No. (Optional)</label>
+                            <input type="text" class="form-input" id="transportVehicle" placeholder="Vehicle Number">
                         </div>
                     </div>
                     <div class="form-group mt-2">
