--- a/public/billing.html
+++ b/public/billing.html
@@ -53,24 +53,30 @@
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
-                            <label class="form-label">Address</label>
-                            <input type="text" class="form-input" id="customerAddress" placeholder="Customer Address">
+                            <label class="form-label">Bill To Address</label>
+                            <textarea class="form-input" id="customerAddress" placeholder="Billing Address"
+                                rows="2"></textarea>
                         </div>
                         <div class="form-group">
-                            <label class="form-label">GSTIN (Optional)</label>
-                            <input type="text" class="form-input" id="customerGstin" placeholder="Customer GSTIN">
+                            <label class="form-label">Delivery To Address (Optional)</label>
+                            <textarea class="form-input" id="deliveryAddress"
+                                placeholder="Delivery Address (if different)" rows="2"></textarea>
                         </div>
                     </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
+                            <label class="form-label">GSTIN (Optional)</label>
+                            <input type="text" class="form-input" id="customerGstin" placeholder="Customer GSTIN">
+                        </div>
+                        <div class="form-group">
                             <label class="form-label">Transport Vehicle No. (Optional)</label>
                             <input type="text" class="form-input" id="transportVehicle" placeholder="Vehicle Number">
                         </div>
-                        <div class="form-group">
-                            <label class="form-label">Transport Charge (Optional)</label>
-                            <input type="number" class="form-input" id="transportCharge" placeholder="₹0.00" step="0.01"
-                                min="0">
-                        </div>
+                    </div>
+                    <div class="form-group mt-2">
+                        <label class="form-label">Transport Charge (Optional)</label>
+                        <input type="number" class="form-input" id="transportCharge" placeholder="₹0.00" step="0.01"
+                            min="0">
                     </div>
                     <div class="form-group mt-2">
                         <label class="form-label">Billing Notes (Optional)</label>
