Center-align GST report table headers

--- a/public/admin.html
+++ b/public/admin.html
@@ -270,12 +270,12 @@
                             <table class="data-table">
                                 <thead>
                                     <tr>
-                                        <th>GST Rate</th>
-                                        <th class="text-right">Taxable Amount</th>
-                                        <th class="text-right">CGST</th>
-                                        <th class="text-right">SGST</th>
-                                        <th class="text-right">IGST</th>
-                                        <th class="text-right">Total GST</th>
+                                        <th class="text-center">GST Rate</th>
+                                        <th class="text-center">Taxable Amount</th>
+                                        <th class="text-center">CGST</th>
+                                        <th class="text-center">SGST</th>
+                                        <th class="text-center">IGST</th>
+                                        <th class="text-center">Total GST</th>
                                     </tr>
                                 </thead>
                                 <tbody id="gstTableBody"></tbody>
