--- a/public/admin.html
+++ b/public/admin.html
@@ -270,12 +270,12 @@
                             <table class="data-table">
                                 <thead>
                                     <tr>
-                                        <th class="text-center">GST Rate</th>
-                                        <th class="text-center">Taxable Amount</th>
-                                        <th class="text-center">CGST</th>
-                                        <th class="text-center">SGST</th>
-                                        <th class="text-center">IGST</th>
-                                        <th class="text-center">Total GST</th>
+                                        <th>GST Rate</th>
+                                        <th>Taxable Amount</th>
+                                        <th>CGST</th>
+                                        <th>SGST</th>
+                                        <th>IGST</th>
+                                        <th>Total GST</th>
                                     </tr>
                                 </thead>
                                 <tbody id="gstTableBody"></tbody>
