--- a/public/billing.html
+++ b/public/billing.html
@@ -51,6 +51,10 @@
                                 oninput="this.value = this.value.replace(/[^0-9+\-\s()]/g, '')">
                         </div>
                     </div>
+                    <div class="form-group mt-2">
+                        <label class="form-label">Bill Date</label>
+                        <input type="date" class="form-input" id="billDate">
+                    </div>
                     <div class="grid grid-2 mt-2">
                         <div class="form-group">
                             <label class="form-label">Bill To Address</label>
