--- a/public/admin.html
+++ b/public/admin.html
@@ -135,7 +135,10 @@
                     <p style="font-size: 3rem; margin-bottom: 1rem;">🧾</p>
                     <h3>Billing Interface</h3>
                     <p class="text-muted mb-3">Use the dedicated billing page for a better experience</p>
-                    <a href="billing.html" class="btn btn-primary">Go to Billing Page</a>
+                    <div class="flex gap-2 justify-center" style="display: flex; gap: 0.5rem; justify-content: center;">
+                        <a href="billing.html" class="btn btn-primary">GST Billing</a>
+                        <a href="estimate.html" class="btn btn-outline">Estimate Billing</a>
+                    </div>
                 </div>
             </section>
 
