fix(ui): perfect report filter dropdown styles and alignment

--- a/public/admin.html
+++ b/public/admin.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="form-group" style="flex: 1; min-width: 200px; margin-bottom: 0;">
                             <label class="form-label">Filter Bills</label>
-                            <select class="form-input" id="reportTypeFilter">
+                            <select class="form-select" id="reportTypeFilter">
                                 <option value="ALL">All Bills</option>
                                 <option value="GST">GST Bills Only</option>
                                 <option value="ESTIMATE">Estimates Only</option>
