Fix filter dropdown positioning by disabling hover transform on form container

--- a/public/admin.html
+++ b/public/admin.html
@@ -148,7 +148,7 @@
                 <p class="text-muted mb-3">View detailed business reports</p>
 
                 <!-- Date Range Selector -->
-                <div class="glass-card mb-3">
+                <div class="glass-card mb-3 no-hover">
                     <div class="flex gap-2" style="align-items: flex-end; flex-wrap: wrap;">
                         <div class="form-group" style="flex: 1; min-width: 200px; margin-bottom: 0;">
                             <label class="form-label">From Date</label>
