feat: Add Transport/Labour Charges to Estimate Billing

--- a/public/estimate.html
+++ b/public/estimate.html
@@ -95,9 +95,15 @@
                 <div class="glass-card" style="position: sticky; top: 100px;">
                     <h3>Summary</h3>
                     <div id="billSummary" class="invoice-summary">
+                        <div class="summary-row">
+                            <span>Transport / Labour:</span>
+                            <input type="number" id="transportCharge" class="form-input"
+                                style="width: 100px; padding: 4px; text-align: right;" placeholder="0"
+                                oninput="EstimateManager.updateSummary()">
+                        </div>
                         <div class="summary-row total">
                             <span>Total:</span>
-                            <strong>₹0.00</strong>
+                            <strong id="displayTotal">₹0.00</strong>
                         </div>
                     </div>
 
