Refactor: Update transport charge label in estimate HTML

--- a/public/estimate.html
+++ b/public/estimate.html
@@ -96,7 +96,7 @@
                     <h3>Summary</h3>
                     <div id="billSummary" class="invoice-summary">
                         <div class="summary-row">
-                            <span>Transport / Labour:</span>
+                            <span>Transport / Labour Charges:</span>
                             <input type="number" id="transportCharge" class="form-input"
                                 style="width: 100px; padding: 4px; text-align: right;" placeholder="0"
                                 oninput="EstimateManager.updateSummary()">
